[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/Health.gd" type="Script" id=1]
[ext_resource path="res://asset/heal_use.wav" type="AudioStream" id=2]
[ext_resource path="res://scene/HealthFail.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/health.png" type="Texture" id=4]
[ext_resource path="res://asset/health_move.wav" type="AudioStream" id=5]
[ext_resource path="res://asset/bottle-clay-uncork-02.wav" type="AudioStream" id=6]
[ext_resource path="res://resource/collision_rect.tres" type="Shape2D" id=7]

[node name="Item" type="Area2D" groups=["interactable"]]
script = ExtResource( 1 )
points = 5
shovable = true
shovable_sfx = ExtResource( 5 )
type = "Health"
texture = ExtResource( 4 )
acquire_sfx = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15, 15 )
shape = ExtResource( 7 )

[node name="Fail" parent="." instance=ExtResource( 3 )]

[node name="UseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[connection signal="animation_finished" from="Fail" to="." method="_on_Fail_animation_finished"]
[connection signal="finished" from="UseSFX" to="." method="_on_UseSFX_finished"]
